--- a/report/statreport.qmd
+++ b/report/statreport.qmd
@@ -575,15 +575,19 @@ self.weights = np.random.randn(n, 1) * np.sqrt(1.0 / n)
 
 ## Ерөнхий гүйцэтгэл:
 
-Эдгээр тоонууд юу гэсэн үг вэ? Бидний загвар ерөнхийдөө сайн ажилладаг боловч цөөнх классыг (>50K) таних нь илүү хэцүү байна. Энэ нь тэнцвэргүй өгөгдлийн ердийн асуудал юм.
+Моделын заагийн утгыг F1 утгын хувьд оновчлох үед ерөнхий үзүүлэлтүүд:
+
+- **Accuracy**: ~0.82
+- **Precision**: ~0.60
+- **Recall**: ~0.74
+- **F1 Score**: ~0.66
+- **Threshold**: 0.58
+
+Бидний модел класс 1-н түүврүүдэд ихэнхдээ зөв таамаглал гаргадаг ч precision = 60% байгаа нь $1$ гэж таамагласан түүврүүдийн 40% нь $0$ байсан гэдгийг илтгэж байна.
 
 ## Confusion матриц
 
-Confusion матриц нь манай алдаануудын төрлийг харуулна:
-
 ![Confusion матриц](images/conmatrix.png)
-
-Яагаад вэ? Өгөгдөл тэнцвэргүй байгаа учраас, энэ загвар байнга олонх классыг ($\leq50K$) харахаар сургагдсан. Энэ нь цөөнх классыг таних нь хэцүү болгодог.
 
 ## Класс тус бүр дээрх гүйцэтгэл
 
