--- a/report/statreport.qmd
+++ b/report/statreport.qmd
@@ -575,131 +575,90 @@ self.weights = np.random.randn(n, 1) * np.sqrt(1.0 / n)
 
 ## Ерөнхий гүйцэтгэл:
 
+Манай загвар эцэст нь хамааран хувьсагч $y_i$-н утгыг зөв таахад л оршино. Энэ хувьсагч нь $\{0, 1\}$ гэсэн хоёрхон утга авах ба энэ нь түүврийн класс болно. Бид баталгаажуулалтын өгөгдөл дээр $0$ классын түүвэрт зөв таамаглал гаргах тоолонд true negative, харин буруу гаргахад false negative үзүүлэлт 1-ээр нэмэгднэ. Мөн адил $1$ класс дээр зөв таах нь true positive, алдах нь false positive үзүүлэлтүүд нэмэгднэ.
+
+$$
+Accuracy = \frac{TP + TN}{TP + TN + FP + FN}
+$$
+
+$$
+Precision = \frac{TP}{TP + FP}
+$$
+
+$$
+Recall = \frac{TP}{TP + FN}
+$$
+
+$$
+F_1 = 2 \times \frac{Precision \times Recall}{Precision + Recall}
+$$
+
 Моделын заагийн утгыг F1 утгын хувьд оновчлох үед ерөнхий үзүүлэлтүүд:
 
-- **Accuracy**: ~0.82
-- **Precision**: ~0.60
-- **Recall**: ~0.74
-- **F1 Score**: ~0.66
-- **Threshold**: 0.58
+- **Accuracy**: $\approx$ 0.82
+- **Precision**: $\approx$ 0.60
+- **Recall**: $\approx$ 0.74
+- **F1 Score**: $\approx$ 0.66
 
-Бидний модел класс 1-н түүврүүдэд ихэнхдээ зөв таамаглал гаргадаг ч precision = 60% байгаа нь $1$ гэж таамагласан түүврүүдийн 40% нь $0$ байсан гэдгийг илтгэж байна.
+Бидний модел класс 1-н түүврүүдийн хувьд ихэнхдээ зөв таамаглал гаргадаг ч precision = 60% байгаа нь $1$ гэж таамагласан түүврүүдийн 40% нь $0$ байсан гэдгийг илтгэж байна. Мөн recall = 74% байгаа нь нийт класс 1-н түүврүүдийн 74%-г зөв таасан гэдгийг харууллаа. 
 
 ## Confusion матриц
 
 ![Confusion матриц](images/conmatrix.png)
 
-## Класс тус бүр дээрх гүйцэтгэл
-
-Класс тус бүрээр нарийвчлан харвал:
-
-**$\leq50K$ анги (олонх):**
-- Precision: 0.89
-- Recall: 0.91  
-- F1: 0.90
-
-Загвар энэ классыг амархан таньдаг.
-
-**$>50K$ анги (цөөнх):**
-- Precision: 0.66
-- Recall: 0.59
-- F1: 0.62
-
-Илүү муу. Энэ нь тэнцвэргүй өгөгдлийн шууд үр дагавар — цөөн дээжтэй ангиудыг суралцах нь хэцүү.
-
 ## Онцлогийн ач холбогдол
 
-Жингүүдийг харахад, юу хамгийн чухал болохыг харж болно. Эхний 5 эерэг ба сөрөг онцлогууд:
+Сигмоид функц шугаман нийлбэрийг ($z = w_1 x_1 + w_2 x_2 + \dots + w_n x_n + b$) магадлал руу хөрвүүлдэг. 
 
-**Эерэг нөлөө (>50K рүү ойртуулах):**
 
-1. **`educational-num` (+0.89):** Боловсрол өндөр байх тусам орлого өндөр байх магадлал ихтэй. 
+- $z \to +\infty$, үед $e^{-z} \to 0$, учир:
 
-2. **`capital-gain` (+0.76):** Хэрэв та хөрөнгө оруулалтаас орлого олж байвал орлого өндөр байх магадлал дээшилнэ.
+$$
+\sigma(z) \to \frac{1}{1 + 0} = 1
+$$
 
-3. **`marital-status_Married-civ-spouse` (+0.46):** Гэрлэсэн хүмүүс илүү тогтвортой орлоготой байх хандлагатай.
+- Харин $z \to -\infty$, үед $e^{-z} \to \infty$, учир:
 
-4. **`occupation_Exec-managerial` (+0.52):** Удирдах албан тушаал = илүү өндөр цалин.
+$$
+\sigma(z) \to \frac{1}{1 + \infty} = 0
+$$
 
-5. **`hours-per-week` (+0.28):** Илүү их ажилласан = илүү их мөнгө.
-
-**Сөрөг нөлөө ($\leq50K$ рүү ойртуулах):**
-
-1. **`occupation_Other-service` (-0.67):** Үйлчилгээний ажил ихэвчлэн бага цалинтай.
-
-2. **`marital-status_Never-married` (-0.48):** Ганц бие байх нь бага орлоготой холбоотой (гэхдээ бодит байдалд бусад хүчин зүйлээс шалтгаалж магадгүй).
-
-3. **`capital-loss` (-0.41):** Хөрөнгийн алдагдал санхүүгийн асуудлын шинж тэмдэг.
-
-4. **`education_HS-grad` (-0.32):** Бүрнэ дунд боловсрол дангаараа өндөр орлого хангахад хүрэлцэхгүй.
-
-## Магадлалын тархалт
-
-Сигмоид функц шугаман нийлбэр буюу linear combination-ийг ($z = w_1 x_1 + w_2 x_2 + \dots + w_n x_n + b$) магадлал руу хөрвүүлдэг.
-
-**$\leq50K$ хүмүүсийн хувьд:**
-- Дундаж магадлал (>50K байх): **0.18**
-- Ихэнх нь 0-0.3 хооронд
-
-Загвар эдгээр хүмүүсийг 100% эерэг биш гэж бодож байна, гэхдээ ихэвчлэн магадлалыг бага байлгадаг.
-
-**$>50K$ хүмүүсийн хувьд:**
-- Дундаж магадлал: **0.57**
-- Илүү өргөн тархалттай (0.2-0.9)
-
-Зарим >50K орлоготой хүмүүс өндөр магадлалтай (0.9+) гарч байгаа ч, зарим нь харьцангуй бага магадлалтай (0.2–0.4) байна. Энэ магадлалын давхцал нь загвар төгс ажиллахаас өөр аргагүйг харуулж байна. Зарим өгөгдөл дээр тодорхой ангилалт хийх хэцүү.
-
-## PR Trade-off
-
-Яагаад бид 100% precision ба 100% recall-д зэрэг хүрч чадахгүй гэж?
-
-Математик талаас боломжгүй, учир нь ангиуд заримдаа давхцдаг. Манай магадлалын тархалтын график үүнийг тодорхой харуулна. Зарим өндөр орлоготой хүмүүсийг загвар бага магадлалтай гэж үзэж, зарим $\leq50K$ хүмүүс өндөр магадлалтай гэж үнэлдэг. Иймээс бид аль ч загвараар 100% зөв ангилах боломжгүй.
-
-Загварын ерөнхий гүйцэтгэлийг ROC AUC=0.891 үзүүлж байна. Энэ нь санамсаргүй таамаглалаас (0.5) илүү сайн бөгөөд ангилалд дунджаар үнэлгээ сайн байгааг харуулна. Төгс үзүүлэлт биш (1.0), гэхдээ оюутны төсөлд анхны оролдлого болгон маш сайн гүйцэтгэл юм.
-
-![Precision-Recall ба ROC муруйнууд](images/PRC.png)
-
-Зүүн талын Precision–Recall муруй нь бидний хамгийн том шийдвэрийн тэнцвэрийг илтгэнэ. Recall-ийг өсгөх үед илүү олон өндөр орлоготой хүмүүсийг илрүүлэх боломжтой ч, босго оноо доошлохын хэрээр Precision буурч, буруу эерэг таамаглал нэмэгддэг. Харин Precision-ийг сайжруулахын тулд илүү хатуу босго тавибал загвар зөв таамаглалд илүү итгэлтэй болох авч, олон жинхэнэ өндөр орлоготой хүмүүсийг орхигдуулах эрсдэлтэй. Энэ муруй нь хоёр классын үл тэнцвэртэй өгөгдлийн үед бодит гүйцэтгэлийг илүү үнэн зөв харуулдаг тул стратегийн хувьд түлхүүр үзүүлэлт болдог.
-
-Баруун талын ROC муруй харьцангуй ерөнхий дүр зургийг өгч, манай загварын ялгах чадвар AUC = 0.891 гэдгийг харуулж байна. Энэ нь санамсаргүй таамаглалаас эрс илүү гүйцэтгэлтэй боловч ROC муруйн нь үл тэнцвэртэй өгөгдөлд хэт өгөөмөр ханддаг гэдгийг мартаж болохгүй. Иймээс өндөр AUC үзүүлэлт нь өөрөө хангалттай биш: практикт бид босго оноог бодитоор тохируулж, Precision ба Recall-ийн хооронд төслийн зорилгод нийцсэн зөв тэнцвэрийг олох шаардлагатай хэвээр байна.
-
-## Онцлогийн жин
-
-Жингүүд нь онцлогийн чухал байдлыг харуулна. Эерэг жин = өндөр орлого руу түлхэх, сөрөг жин = бага орлого руу түлхэх:
+Жингийн утга нь ихсэх тусам тухайн түүвэр нь класс 1-н гишүүн байх магадлал нь дагаж ихэснэ. Жингүүдийг харахад аль онцлог $x$ хамгийн чухал болохыг харж болно.
 
 ![Хамгийн чухал 15 онцлогийн жин](images/features.png)
 
-Хамгийн өндөр нөлөөтэй хүчин зүйлс:
+## Магадлалын тархалт
 
-1.  **educational-num (+0.89):** Боловсролын түвшин. Энэ нь хамгийн хүчтэй эерэг нөлөөтэй хүчин зүйл болж байна. Боловсрол өндөр байх тусам орлого өндөр байх магадлал эрс нэмэгдэнэ.
-2.  **capital-gain (+0.76):** Хөрөнгө оруулалтын ашиг. Санхүүгийн нэмэлт эх үүсвэртэй байх нь өндөр орлогын тод шинж тэмдэг юм.
-3.  **occupation_Other-service (-0.67):** Үйлчилгээний салбарын ажил. Энэ нь орлогод сөргөөр нөлөөлж байна, өөрөөр хэлбэл энэ салбарт ажиллагсад $\leq50K$ классд орох магадлал өндөр.
-4.  **marital-status_Never-married (-0.48):** Гэрлэж байгаагүй. Ганц бие хүмүүс гэр бүлтэй хүмүүстэй харьцуулахад орлого багатай байх хандлага ажиглагдсан.
-5.  **marital-status_Married-civ-spouse (+0.46):** Гэрлэсэн байдал. Эсрэгээрээ, гэр бүлийн тогтвортой байдал нь өндөр орлоготой эерэг хамааралтай байна.
-
-Эдгээр үр дүн нь нийгэм, эдийн засгийн бодит байдалтай бүрэн нийцэж байна. Загвар маань зүгээр нэг тоо таах биш, бодит амьдралын зүй тогтлыг олж харсан гэж дүгнэж болно.
-
-## Сигмоид функц ба магадлалын тархалт
+Зарим >50K орлоготой хүмүүс өндөр магадлалтай (0.9+) гарч байгаа ч, зарим нь харьцангуй бага магадлалтай (0.2–0.4) байна. Энэ магадлалын давхцал нь зарим өгөгдөл дээр тодорхой ангилалт хийх бэрхшээлийг харуулж байна.
 
 Сигмоид функц нь загварын гаргасан тоон үнэлгээг (score) магадлал руу хөрвүүлдэг. Зүүн талд математик функц, баруун талд бидний загварын бодит таамаглалууд хэрхэн тархсаныг харуулж байна:
 
 ![Сигмоид функц ба магадлалын тархалт](images/sigmoid.png)
 
-**Гол ойлголт:** 
 Зүүн талын график нь онолын хэсэг — $z=0$ үед магадлал яг 0.5 байна. Харин баруун талын гистограм нь бодит байдлыг харуулна:
 
-*   **Улаан хэсэг ($\leq50K$):** Ихэнх нь 0-0.3 магадлалтай байна. Загвар энэ хүмүүсийг бага орлоготой гэдэгтээ нэлээд итгэлтэй байна.
-*   **Ногоон хэсэг (>50K):** Тархалт нь 0.2-оос 0.9 хүртэл маш өргөн байна. Энд давхцал их байгааг анзаараарай.
-*   Энэ давхцал нь яагаад бид 100% нарийвчлалтай байж чадахгүйг тайлбарладаг. Зарим өндөр орлоготой хүмүүс бага орлоготой хүмүүстэй ижил шинж чанартай (эсвэл эсрэгээрээ) байгаа тул загвар тэднийг ялгахад хүндрэлтэй байна.
+*   **Улаан хэсэг ($\leq50K$):** Ихэнх нь $0 - 0.3$ магадлалтай байна. Загвар энэ хүмүүсийг бага орлоготой гэдэгтээ нэлээд итгэлтэй байна.
+*   **Ногоон хэсэг ($>50K$):** Тархалт нь $0.2$ - оос $0.9$ хүртэл маш өргөн байна. Энд давхцал их байгааг анзаараарай.
 
 # Дүгнэлт
 
-Энэхүү төсөл нь логистик регрессийг практикт хэрэгжүүлэх явцдаа зөвхөн алгоритмын ажиллагаа төдийгүй өгөгдлийн чанар, статистик ойлголтууд загварын гүйцэтгэлд ямар их нөлөөтэйг бодитоор мэдрэх боломж олголоо. Загвар тогтвортой суралцаж, хэт тохируулалт ажиглагдаагүй нь зөв регуляризацийн сонголт болон градиент бууруулалтын тохиргоо оновчтой байсны илрэл юм. Гэсэн хэдий ч гүйцэтгэл, ялангуяа accuracy нь 80% давахгүй байгаа нь өгөгдлийн бүтэц, классын тэнцвэргүй байдал зэрэгтэй холбоотой.
+Энэхүү төсөл нь логистик регрессийг практикт хэрэгжүүлэх явцдаа зөвхөн алгоритмын ажиллагаа төдийгүй өгөгдлийн чанар, статистик ойлголтууд загварын гүйцэтгэлд ямар их нөлөөтэйг бодитоор мэдрэх боломж олголоо. Загвар тогтвортой суралцаж, overfitting ажиглагдаагүй нь L2 арга болон градиент бууруулалт оновчтой байсны илрэл юм. Гэсэн хэдий ч гүйцэтгэл, ялангуяа F1 үнэлгээ нь $0.66$ давахгүй байгаа нь өгөгдлийн бүтэц, классын тэнцвэргүй байдал зэрэгтэй холбоотой.
 
-Ирээдүйд Random Forest, Gradient Boosting зэрэг илүү нарийн төвөгтэй загваруудыг ашиглавал >50K орлоготой хүмүүсийг илүү найдвартай таамаглах боломжтой. Гол сургамж нь зөвхөн Accuracy-аас гадна Precision, Recall, ROC/AUC зэрэг үзүүлэлтүүдийг ойлгон, загварын хязгаарлалт, өгөгдлийн чанарыг хамтад нь үнэлэх хэрэгтэй гэдгийг харуулж байна.
+Ирээдүйд Random forest, decision tree зэрэг шугаман бус загваруудыг ашиглавал >50K орлоготой хүмүүсийг илүү найдвартай таамаглах боломжтой. Гол сургамж нь зөвхөн accuracy-аас гадна precision, recall, F1 үзүүлэлтүүдийг ойлгон, ашиглах загвараа болон өгөгдлийн чанарыг хамтад нь үнэлэх хэрэгтэй гэдгийг харуулж байна.
 
 # Багийн гишүүдийн оролцоо
 
 Багаараа цаг товлон уулзаж, зорилго болон сэдэв сонголтоо хийсэн. Хүн бүр өөрсдийн хийх ажлыг хуваан авч гэр гэрээсээ хийхээр болсон. Github дээр шинэ төсөл үүсгэж 4 гишүүд бүгд жигд оролцон хийсэн.
 
 # Ишлэл зүүлт
+- Scikit - learn developers. (n.d.). *Logistic Regression — scikit‑learn documentation*. Retrieved from https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression  
+
+- StatQuest. (n.d.). *Logistic Regression* [YouTube playlist]. Retrieved from https://www.youtube.com/watch?v=yIYKR4sgzI8&list=PLblh5JKOoLUKxzEP5HA2d-Li7IJkHfXSe  
+
+- Russell, S., & Norvig, P. (2016). *Artificial Intelligence: A Modern Approach* (3rd ed.).  
+
+- Google Developers. (n.d.). *Logistic regression: Loss and regularization*. Retrieved from https://developers.google.com/machine-learning/crash-course/logistic-regression/loss-regularization  :contentReference[oaicite:0]{index=0}  
+
+- Danushka. (n.d.). *Logistic Regression (lecture notes/pdf)*. Retrieved from https://danushka.net/lect/dm/logreg.pdf  :contentReference[oaicite:1]{index=1}  
+
+- Curtis, F. E., & Scheinberg, K. (2017). *Optimization Methods for Supervised Machine Learning: From Linear Models to Deep Learning*. arXiv preprint arXiv:1706.10207.  :contentReference[oaicite:2]{index=2}  
