--- a/report/statreport.qmd
+++ b/report/statreport.qmd
@@ -58,21 +58,19 @@ format:
 
 # Оршил
 
-Энэ төслийн зорилго нь хувь хүний жилийн орлого 50,000 ам.доллароос дээш эсэхийг таамаглах явдал юм. Бид АНУ-ын Хүн амын тооллогын Adult Income өгөгдлийн санг ашиглан орлогын түвшинг урьдчилан таамаглах загвар боловсруулна. Энэхүү өгөгдлийн сан нь нас, боловсрол, мэргэжил, гэр бүлийн байдал зэрэг олон хувьсагчийг агуулдаг бөгөөд эдгээр нь хувь хүний санхүүгийн байдалд нөлөөлдөг гол хүчин зүйлс юм.
-
-Төслийн үндсэн зорилго нь зөвхөн таамаглал гаргах бус, өгөгдөл дэх хамаарал, классын тэнцвэргүй байдал, оролцож буй хувьсагчдын нөлөөллийг ойлгож, загварын үйл ажиллагааг үнэлэхэд оршино. Энд бид логистик регрессийг ашиглан хоёртын ангиллын асуудлыг шийдвэрлэх ба загварын үзүүлэлтүүд нь орлогыг зөв таамаглах боломжийг хэр сайн хангаж байгааг илтгэнэ. Үүнээс гадна энэ төсөл нь өгөгдлийн шинжилгээ, ангиллын загварчлал болон статистик үндэслэлтэй шийдвэр гаргалтын практик дадлага олгоно.
+Энэ төслийн зорилго нь хувь хүний мэдээллийг нь ашиглан жилийн орлого нь 50,000 ам.доллароос дээш эсэхийг таамаглах явдал юм. Бид Kaggle платформ дээрх Adult Income өгөгдлийг ашиглан орлогын түвшинг урьдчилан таамаглах логистик регресс загвар боловсруулж, гаргсан үр дүн дээр дүн шинжилгээ хийнэ. Үүний зэрэгцээ загварынхаа магадлалт болон статистикийн суурьтай танилцаж, оновчлолын аргуудын талаар сурах болно.
 
 # Өгөгдөл
 
 ## Өгөгдлийн эх үүсвэр ба зорилго
 
-Бид Kaggle платформын Income Dataset буюу орлогын мэдээллийг ашигласан. Энэ өгөгдлийн багцад нас, боловсрол, мэргэжил, гэрлэлтийн байдал, хүйс зэрэг нийгэм эдийн засгийн шинж чанаруудыг илэрхийлэх олон хувьсагч орсон. Бидний зорилтот хувьсагч бол `income_>50K` (0 = $\leq50K$, 1 = $>50K$) юм. Өгөгдлийг цэвэрлэсний дараа үлдсэн хувьсагчдын мэдээллийг ашиглан энэ хувьсагчийн утгыг зөв таамаглах нь бидний үндсэн зорилго болно.
+Бид Kaggle платформын Income Dataset буюу орлогын мэдээллийг ашигласан. Энэ өгөгдлийн багцад нас, боловсрол, мэргэжил, гэрлэлтийн байдал, хүйс зэрэг нийгэм эдийн засгийн шинж чанаруудыг илэрхийлэх олон хувьсагч орсон. Бидний зорилтот буюу хамааран хувьсагч бол `income_>50K` (0 = $\leq50K$, 1 = $>50K$) юм. Өгөгдлийг цэвэрлэсний дараа үлдсэн хувьсагчдын мэдээллийг ашиглан энэ хувьсагчийн утгыг зөв таамаглах нь бидний үндсэн зорилго болно.
 
 Түүврийн нийт хэмжээ нь ойролцоогоор 44,000 бөгөөд бид үүнийг сургах болон үнэлгээ хийх хоёр хэсэгт хуваана. Хуваалтын дараа 35165 мөр нь сургалтын хэсэг, 8792 мөр нь баталгаажуулалт, шалгалтын хэсгийг бүрдүүлнэ.
 
 Гэвч өгөгдөлтэй ажиллах гол бэрхшээл нь классуудын тэнцвэргүй байдал юм. Ихэнх хүмүүс ($\approx$ 76%) $\leq50K$ орлоготой. Харин цөөнх хувь нь ($\approx$ 24%) $>50K$ орлоготой.
 
-Өгөгдөлд хүмүүсийн ихэнх хувь нь 50K-аас их орлоготой байгаа тул энгийн загвар ашиглавал accuracy нь 76% гарна гэсэн үг. Гэвч энэ нь цөөнх 50K-аас бага орлоготой хүмүүсийг огт танихгүй тул хангалтгүй юм. Тиймээс бид 2 классыг хоёуланг нь оновчтойгоор авч үздэг логистик регрессийг ашиглаж, аль аль классыг нь зөв таамаглах боломжтой загвар боловсруулна. Үүний тулд F1 оноо, Recall зэрэг үзүүлэлтүүдийг чухалчилна.
+Өгөгдөлд хүмүүсийн ихэнх хувь нь 50K-аас их орлоготой байгаа тул энгийн загвар ашиглавал accuracy нь 76% гарна гэсэн үг. Гэвч энэ нь цөөнх 50K-аас бага орлоготой хүмүүсийг огт танихгүй тул хангалтгүй юм. Тиймээс бид 2 классыг хоёуланг нь оновчтойгоор авч үздэг загварыг ашиглаж, аль аль классыг нь зөв таамаглах боломжтой загвар боловсруулна. Үүний тулд F1 оноо, recall зэрэг үзүүлэлтүүдийг чухалчилна.
 
 ## Өгөгдлөө цэвэрлэх
 
@@ -87,8 +85,6 @@ format:
 - Тоон хувьсагч (5): `age`, `educational-num`, `capital-gain`, `capital-loss`, `hours-per-week`
 
 - Чанарын хувьсагч (4): `education`, `marital-status`, `occupation`, `gender`
-
-Энэ нь загварын хурд, үр ашиг, тайлбарлах чадварыг нэмэгдүүлэх зорилготой.
 
 ## Өгөгдөл хуваах
 
@@ -121,7 +117,7 @@ val_df.to_csv("val_split.csv", index=False)
 ```
 ## Урьдчилсан боловсруулалт
 
-Логистик регресс загварт өгөгдлийг оруулахын өмнө тоон болон категори хувьсагчийг зохих хэлбэрт хөрвүүлэх шаардлагатай. Энэ процессыг дараах байдлаар хийсэн.
+Логистик регресс загварт өгөгдлийг оруулахын өмнө тоон болон чанарын хувьсагчийг зохих хэлбэрт хөрвүүлэх шаардлагатай. Энэ процессыг дараах байдлаар хийсэн.
 
 **Тоон хувьсагчид:**  
 
@@ -133,11 +129,11 @@ $$
 
 **Чанарын хувьсагчид:**  
 
-OneHotEncoder ашиглаж чанарын хувьсагч бүрийг хоёртын вектор болгон хөрвүүлсэн. Учир нь машин сургалтын алгоритмууд текст буюу категори утгыг шууд ойлгох боломжгүй тул категори утгыг тоон хэлбэрт хөрвүүлэх шаардлагатай байдаг. Энэ нь ямар ч дараалал, зэрэглэлгүй тус бүрийн категори утгыг 0/1 утгаар илэрхийлдэг.
+OneHotEncoder ашиглаж чанарын хувьсагч бүрийг хоёртын вектор болгон хөрвүүлсэн. Учир нь машин сургалтын алгоритмууд текст буюу чанарын утгыг шууд ойлгох боломжгүй тул тоон хэлбэрт хөрвүүлэх шаардлагатай байдаг. OneHotEncoder нь хувьсагчийн утгуудыг ямар нэгэн дараалал, зэрэглэлтэй гэж үзэхгүй.
 
 Жишээлбэл, `education` гэх чанарын хувьсагчийг авч үзье. Үүний утгууд нь:
 
-$[E = \{\text{HS}, \text{Bachelors}, \text{Masters}, \text{Doctorate}\}]$
+$education = \{\text{HS}, \text{Bachelors}, \text{Masters}, \text{Doctorate}\}$
 
 One-hot кодчилол нь уг хувьсагчийг дараах байдлаар хувиргана:
 
@@ -145,7 +141,23 @@ $$
 f(x) = \begin{cases} [1, 0, 0, 0] & \text{if } x = \text{HS} \\[1mm][0, 1, 0, 0] & \text{if } x = \text{Bachelors} \\[1mm][0, 0, 1, 0] & \text{if } x = \text{Masters} \\[1mm][0, 0, 0, 1] & \text{if } x = \text{Doctorate} \end{cases}
 $$
 
-Энэ нь тус бүрийн категори хувьсагчийг Бернуллийн хувьсагч болгож байна гэсэн үг юм.
+Эндээс бид онцлогийнхоо (feature) матрицийг гаргаж авна:
+
+$$
+X \in \mathbb{R}^{m \times n} =
+\begin{bmatrix}
+x_{11} & x_{12} & \cdots & x_{1n} \\
+x_{21} & x_{22} & \cdots & x_{2n} \\
+\vdots & \vdots & \ddots & \vdots \\
+x_{m1} & x_{m2} & \cdots & x_{mn}
+\end{bmatrix}.
+$$
+
+Энд:
+
+- $m$ = Түүврийн хэмжээ
+
+- $n$ = Онцлогийн тоо
 
 **Загварын гиперпараметр:**
 
@@ -344,14 +356,14 @@ def compute_loss(self, y_true, y_pred, sample_weights=None):
 
 ## Градиент бууруулалт (Gradient descent)
 
-Одоо манай алдагдлын функц тодорхойлогдсон. Гэхдээ нийт алдааг багасгахын тулд градиент бууруулалт гэж нэрлэгддэг аргыг ашиглана. Энэ тохиолдолд градиент гэдэг нь жингүүдийн аль чиглэлд өөрчлөгдөх үед алдаа нь хамгийн хурдтай өсөж буурахыг илэрхийлдэг вектор. 
+Одоо манай алдагдлын функц тодорхойлогдсон. Гэхдээ нийт алдааг багасгахын тулд градиент бууруулалт гэж нэрлэгддэг аргыг ашиглана. Энэ тохиолдолд градиент гэдэг нь жингүүдийн аль чиглэлд өөрчлөх үед алдаа нь хамгийн хурдтай өсөж буурахыг илэрхийлдэг вектор. 
 
 Градиент бууруулалтын үндсэн санаа нь уг градиентийг тооцоолоход оршино. 
 
 Жингийн градиент:
 
 $$
-\frac{\partial \mathcal{L}}{\partial {w}} = \frac{1}{m} {X}^\top (\hat{{p}} - {y}) + \frac{\lambda}{m} {w}
+\frac{\partial L}{\partial {w}} = \frac{1}{m} {X}^\top (\hat{{p}} - {y}) + \frac{\lambda}{m} {w}
 $$
 
 - ${X} \in \mathbb{R}^{m \times n}$: онцлогийн матриц ($m \times n$)
@@ -363,26 +375,25 @@ $$
 Жингийн градиент нь $n \times 1$ вектор.
 
 $$
-\frac{\partial \mathcal{L}}{\partial {w}} \in \mathbb{R}^{n \times 1}
+\frac{\partial L}{\partial {w}} \in \mathbb{R}^{n \times 1}
 $$
 
 Хазайлтын градиент:
 
-$$\frac{\partial \mathcal{L}}{\partial b} = \frac{1}{m} \sum_{i=1}^{m} (\hat{p}_i - y_i)
+$$\frac{\partial L}{\partial b} = \frac{1}{m} \sum_{i=1}^{m} (\hat{p}_i - y_i)
 $$
 
 Жингийн градиент бууруулах дүрэм:
 
 $$
-{w} \leftarrow {w} - \alpha \frac{\partial \mathcal{L}}{\partial {w}}
+{w} \leftarrow {w} - \alpha \frac{\partial L}{\partial {w}}
 $$
 
 $$
-b \leftarrow b - \alpha \frac{\partial \mathcal{L}}{\partial b}
+b \leftarrow b - \alpha \frac{\partial L}{\partial b}
 $$
 
-
-$\alpha$ = сурах эрчим. $\alpha$ нь тогтмол утга бөгөөд нэг сургалтын итераци болгонд жин, хазайлт хоёрын өөрчлөлтийг удирдах коэффициент.
+$\alpha$ = сурах эрчим. $\alpha$ нь тогтмол утга бөгөөд сургалтын давталт болгонд жин, хазайлт хоёрын өөрчлөлтийг удирдах коэффициент.
 
 ```python
 def _compute_gradients(self, X, y, y_pred):
@@ -526,7 +537,8 @@ self.weights = np.random.randn(n, 1) * np.sqrt(1.0 / n)
         y = np.array(y).reshape(-1, 1)
         
         self.class_weights_ = self.compute_class_weights(y.flatten())
-        sample_weights = np.array([self.class_weights_[cls] for cls in y.flatten()]).reshape(-1, 1)
+        sample_weights = np.array([self.class_weights_[cls] for cls in y.flatten()])
+        .reshape(-1, 1)
         
         self.weights = np.random.randn(n, 1) * np.sqrt(1.0 / n)
         self.bias = 0
@@ -630,9 +642,9 @@ $$
 
 ## Магадлалын тархалт
 
-Зарим $>50K$ орлоготой хүмүүс өндөр магадлалтай (0.9+) гарч байгаа ч, зарим нь харьцангуй бага магадлалтай (0.2–0.4) байна. Энэ магадлалын давхцал нь зарим өгөгдөл дээр тодорхой ангилалт хийх бэрхшээлийг харуулж байна.
+Зарим $>50K$ орлоготой хүмүүс өндөр магадлалтай (0.9+) гарч байгаа ч, зарим нь харьцангуй бага магадлалтай (0.2 - 0.4) байна. Энэ магадлалын давхцал нь зарим өгөгдөл дээр тодорхой ангилалт хийх бэрхшээлийг харуулж байна.
 
-Зүүн талд математик функц, баруун талд бидний загварын бодит таамаглалууд хэрхэн тархсаныг харуулж байна:
+Зүүн талд математик функц, баруун талд бидний загварын таамаглалууд хэрхэн тархсаныг харуулж байна:
 
 ![Сигмоид функц ба магадлалын тархалт](images/sigmoid.png)
 
@@ -643,15 +655,13 @@ $$
 
 Энэхүү төсөл нь логистик регрессийг практикт хэрэгжүүлэх явцдаа зөвхөн алгоритмын ажиллагаа төдийгүй өгөгдлийн чанар, статистик ойлголтууд загварын гүйцэтгэлд ямар их нөлөөтэйг бодитоор мэдрэх боломж олголоо. Загвар тогтвортой суралцаж, overfitting ажиглагдаагүй нь L2 арга болон градиент бууруулалт оновчтой байсны илрэл юм. Гэсэн хэдий ч гүйцэтгэл, ялангуяа F1 үнэлгээ нь $0.66$ давахгүй байгаа нь өгөгдлийн бүтэц, классын тэнцвэргүй байдал зэрэгтэй холбоотой.
 
-Ирээдүйд Random forest, decision tree зэрэг шугалан бус загваруудыг ашиглавал >50K орлоготой хүмүүсийг илүү найдвартай таамаглах боломжтой. Гол сургамж нь зөвхөн accuracy-аас гадна precision, recall, F1 үзүүлэлтүүдийг ойлгон, ашиглах загвараа болон өгөгдлийн чанарыг хамтад нь үнэлэх хэрэгтэй гэдгийг харуулж байна.
+Ирээдүйд random forest, decision tree зэрэг шугаман бус загваруудыг ашиглавал >50K орлоготой хүмүүсийг илүү найдвартай таамаглах боломжтой. Гол сургамж нь зөвхөн accuracy-аас гадна precision, recall, F1 үзүүлэлтүүдийг ойлгон, ашиглах загвараа болон өгөгдлийн чанарыг хамтад нь үнэлэх хэрэгтэй гэдгийг харуулж байна.
 
 # Багийн гишүүдийн оролцоо
 
 Багаараа цаг товлон уулзаж, зорилго болон сэдэв сонголтоо хийсэн. Хүн бүр өөрсдийн хийх ажлыг хуваан авч гэр гэрээсээ хийхээр болсон. Github дээр шинэ төсөл үүсгэж 4 гишүүд бүгд жигд оролцон хийсэн.
 
 # Ном зүй
-
-## References
 
 - Fatakdawala, Mustafa. (2018). *Income Dataset* 
   <https://www.kaggle.com/datasets/mastmustu/income>
