--- a/report/statreport.qmd
+++ b/report/statreport.qmd
@@ -150,7 +150,7 @@ x_{11} & x_{12} & \cdots & x_{1n} \\
 x_{21} & x_{22} & \cdots & x_{2n} \\
 \vdots & \vdots & \ddots & \vdots \\
 x_{m1} & x_{m2} & \cdots & x_{mn}
-\end{bmatrix}.
+\end{bmatrix}
 $$
 
 Энд:
@@ -311,7 +311,7 @@ y_i \log(\hat{p}_i) + (1 - y_i)\log(1 - \hat{p}_i)
 \right].
 $$
 
-## L2 тогтворжуулалт (regularization)
+## L2 тогтворжуулалт (Regularization)
 
 Хэт том утгатай жингээс үүдэлтэй overfitting-ээс сэргийлнэ 
 
