--- a/report/statreport.qmd
+++ b/report/statreport.qmd
@@ -58,19 +58,19 @@ format:
 
 # Оршил
 
-Энэ төслийн зорилго нь хувь хүний мэдээллийг нь ашиглан жилийн орлого нь 50,000 ам.доллароос дээш эсэхийг таамаглах явдал юм. Бид Kaggle платформ дээрх Adult Income өгөгдлийг ашиглан орлогын түвшинг урьдчилан таамаглах логистик регресс загвар боловсруулж, гаргсан үр дүн дээр дүн шинжилгээ хийнэ. Үүний зэрэгцээ загварынхаа магадлалт болон статистикийн суурьтай танилцаж, оновчлолын аргуудын талаар сурах болно.
+Энэ төслийн зорилго нь хувь хүний мэдээллийг нь ашиглан жилийн орлого нь 50,000 ам.доллароос дээш эсэхийг таамаглах явдал юм. Бид Kaggle платформ дээрх Adult Income өгөгдлийг ашиглан орлогын түвшинг урьдчилан таамаглах логистик регресс загвар боловсруулж, гаргасан үр дүн дээр дүн шинжилгээ хийнэ. Үүний зэрэгцээ загварынхаа магадлалт болон статистикийн суурьтай танилцаж, оновчлолын аргуудын талаар сурах болно.
 
 # Өгөгдөл
 
 ## Өгөгдлийн эх үүсвэр ба зорилго
 
-Бид Kaggle платформын Income Dataset буюу орлогын мэдээллийг ашигласан. Энэ өгөгдлийн багцад нас, боловсрол, мэргэжил, гэрлэлтийн байдал, хүйс зэрэг нийгэм эдийн засгийн шинж чанаруудыг илэрхийлэх олон хувьсагч орсон. Бидний зорилтот буюу хамааран хувьсагч бол `income_>50K` (0 = $\leq50K$, 1 = $>50K$) юм. Өгөгдлийг цэвэрлэсний дараа үлдсэн хувьсагчдын мэдээллийг ашиглан энэ хувьсагчийн утгыг зөв таамаглах нь бидний үндсэн зорилго болно.
+Бидний ашигласан өгөгдөл нь 1994 U.S. Census Current Population Survey судалгаанаас гаргаж авсан бодит өгөгдлийн цэвэрлэгдсэн хэсэг юм. Энэхүү цуглуулгыг Барри Беккер боловсруулж, Ронни Кохави UCI-ийн машин сургалтын агуулахад хандивласан. Энэ өгөгдлийн багцад нас, боловсрол, мэргэжил, гэрлэлтийн байдал, хүйс зэрэг нийгэм эдийн засгийн шинж чанаруудыг илэрхийлэх олон хувьсагч орсон. Бидний зорилтот буюу хамааран хувьсагч бол `income_>50K` юм. Өгөгдлийг цэвэрлэсний дараа үлдсэн хувьсагчдын мэдээллийг ашиглан энэ хувьсагчийн утгыг зөв таамаглах нь бидний үндсэн зорилго болно.
 
 Түүврийн нийт хэмжээ нь ойролцоогоор 44,000 бөгөөд бид үүнийг сургах болон үнэлгээ хийх хоёр хэсэгт хуваана. Хуваалтын дараа 35165 мөр нь сургалтын хэсэг, 8792 мөр нь баталгаажуулалт, шалгалтын хэсгийг бүрдүүлнэ.
 
-Гэвч өгөгдөлтэй ажиллах гол бэрхшээл нь классуудын тэнцвэргүй байдал юм. Ихэнх хүмүүс ($\approx$ 76%) $\leq50K$ орлоготой. Харин цөөнх хувь нь ($\approx$ 24%) $>50K$ орлоготой.
+Гэвч өгөгдөлтэй ажиллах гол бэрхшээл нь классуудын тэнцвэргүй байдал юм. Эх олонлогоос ойролцоогоор 76% хүмүүс нь $\leq50K$ орлоготой. Харин 24% нь $>50K$ орлоготой.
 
-Өгөгдөлд хүмүүсийн ихэнх хувь нь 50K-аас их орлоготой байгаа тул энгийн загвар ашиглавал accuracy нь 76% гарна гэсэн үг. Гэвч энэ нь цөөнх 50K-аас бага орлоготой хүмүүсийг огт танихгүй тул хангалтгүй юм. Тиймээс бид 2 классыг хоёуланг нь оновчтойгоор авч үздэг загварыг ашиглаж, аль аль классыг нь зөв таамаглах боломжтой загвар боловсруулна. Үүний тулд F1 оноо, recall зэрэг үзүүлэлтүүдийг чухалчилна.
+Өгөгдөлд хүмүүсийн ихэнх хувь нь 50K-аас бага орлоготой байгаа тул энгийн загвар ашиглавал accuracy нь 76% гарна гэсэн үг. Гэвч энэ 50K-аас бага орлоготой хүмүүсийг огт харгалзан үзэхгүй тул хангалтгүй юм. Тиймээс бид 2 классыг хоёуланг нь оновчтойгоор авч үздэг загварыг бүтээж, аль аль классыг нь зөв таамаглах боломжтой загвар боловсруулна. Үүний тулд F1 оноо, recall зэрэг үзүүлэлтүүдийг чухалчилна.
 
 ## Өгөгдлөө цэвэрлэх
 
@@ -103,6 +103,7 @@ df = pd.read_csv("data.csv")
 keep_cols = ["age", "educational-num", "capital-gain", "capital-loss",
              "hours-per-week", "education", "marital-status", "occupation",
              "gender", "income_>50K"]
+
 df = df[keep_cols]
 
 # Сургалт/баталгаажуулалт хуваалт
@@ -133,7 +134,9 @@ OneHotEncoder ашиглаж чанарын хувьсагч бүрийг хоё
 
 Жишээлбэл, `education` гэх чанарын хувьсагчийг авч үзье. Үүний утгууд нь:
 
-$education = \{\text{HS}, \text{Bachelors}, \text{Masters}, \text{Doctorate}\}$
+$$
+education = \{\text{HS}, \text{Bachelors}, \text{Masters}, \text{Doctorate}\}
+$$
 
 One-hot кодчилол нь уг хувьсагчийг дараах байдлаар хувиргана:
 
@@ -186,7 +189,7 @@ $$
  
 буюу гаралт $y$ нь $1$-тэй тэнцүү байх магадлалыг олох зорилготой.
  
-Энэ төслийн хувьд бидний зорилтод хувьсагч маань `income > 50K` үед `1`, `income` $\leq50K$ үед $0$ гэсэн хоёр л утга авна. Иймээс түүвэр болгоны хувьд энэ хувьсагчийг санамсаргүй хувьсагчаар загварчилж болно.
+Энэ төслийн хувьд бидний зорилтод хувьсагч маань `income > 50K` үед `1`, `income` $\leq50K$ үед $0$ гэсэн хоёр л утга авна. Иймээс түүвэр болгоны хувьд энэ хувьсагчийг Бернуллийн санамсаргүй хувьсагчаар загварчилж болно.
  
 $$
 y_i \sim \text{Bernoulli}(p_i)
@@ -246,7 +249,7 @@ $$
 ## Эх олонгогийн үнэний хувь
 
 Бүх $y_i$ нь Бернуллийн санамсаргүй утга. Өгөгдлийн цэгүүд нь бусдаасаа хамааргүй гэж үзвэл
-$w, b$ хоёр параметрүүдийг өгсөн үед бүх $y_i$-г ажиглах магадлал нь:
+$w, b$ хоёр параметрүүдийг өгсөн үед бүх $y_i$-г ажиглах магадлал нь дараах үнэний хувийн функцээр (likelihood function) тооцоологдно:
 
 $$
 \mathcal{L}(w,b) = \prod_{i=1}^{m} \hat{p}_i^{y_i} (1 - \hat{p}_i)^{1-y_i}
@@ -261,7 +264,7 @@ $$
 
 ## Үнэний хувиар алдааг илэрхийлэх
 
-Хэрвээ бид үржвэрүүдтэй ажиллах бол компьютер дүрслэх боломжгүй жижиг тоотой ажиллах хэрэгтэй болох тул үнэний хувийн функц $\mathcal{L}(w,b)$-н натурал логарифмийг авна.
+Хэрвээ бид үржвэрүүдтэй ажиллах бол компьютер дүрслэх боломжгүй бага тоотой ажиллах хэрэгтэй болох тул үнэний хувийн функц $\mathcal{L}(w,b)$-н натурал логарифмийг авна.
 
 $$
 \log \mathcal{L}(w,b) = \sum_{i=1}^{m}
@@ -295,7 +298,7 @@ $$
 
 - $if$ $y = 0\: \ell = -\log(1 - \hat{p})$
 
-Cross-entropy нь загварыг итгэлтэйгээр буруу таамаглал гаргахыг илүү шийтгэдэг. Өөрөөр хэлбэл 1 эсвэл 0-тэй маш ойрхон магадлал (0.99, 0.01 г.м.) гаргаад энэ нь буруу болж таарвал алдаа нь өндөр гарч ирнэ.
+Cross-entropy нь загварыг итгэлтэйгээр буруу таамаглал гаргахыг илүү шийтгэдэг. Өөрөөр хэлбэл 1 эсвэл 0-тэй маш ойрхон магадлал (0.99, 0.01 г.м.) таамаглахад буруу болж таарвал алдаа нь өндөр гарч ирнэ.
 
 | Таамаглал $\hat{p}$ | Алдаа $-\log(\hat{p})$ | Шийтгэлийн түвшин |
 |---------------------|----------------------|----------------|
@@ -356,9 +359,7 @@ def compute_loss(self, y_true, y_pred, sample_weights=None):
 
 ## Градиент бууруулалт (Gradient descent)
 
-Одоо манай алдагдлын функц тодорхойлогдсон. Гэхдээ нийт алдааг багасгахын тулд градиент бууруулалт гэж нэрлэгддэг аргыг ашиглана. Энэ тохиолдолд градиент гэдэг нь жингүүдийн аль чиглэлд өөрчлөх үед алдаа нь хамгийн хурдтай өсөж буурахыг илэрхийлдэг вектор. 
-
-Градиент бууруулалтын үндсэн санаа нь уг градиентийг тооцоолоход оршино. 
+Одоо манай алдааны функц тодорхойлогдсон. Гэхдээ нийт алдааг багасгахын тулд градиент бууруулалт хэмээх аргыг ашиглана. Градиент нь ерөнхийдөө жин болон хазайлтыг аль чиглэлд өөрчлөх үед алдаа нь хамгийн хурдтай өсөж буурахыг илэрхийлэх вектор. Алдааны функцын w, b хоёрын хувьд авсан тухайн уламжлалыг олно.
 
 Жингийн градиент:
 
@@ -619,6 +620,12 @@ $$
 
 ![Confusion матриц](images/conmatrix.png)
 
+## Заагийн утга
+
+Дараах графаас заагийн утга болон харгалзах F1, precision болон recall-ийн оноонуудыг харж болно. F1 оноо нь хамгийн ихдээ ойролцоогоор 0.66 гарах билээ.
+
+![Заагийн утга](images/threshold.png)
+
 ## Онцлогийн ач холбогдол
 
 Сигмоид функц шуглан нийлбэрийг ($z = w_1 x_1 + w_2 x_2 + \dots + w_n x_n + b$) магадлал руу хөрвүүлдэг. 
@@ -653,20 +660,25 @@ $$
 
 # Дүгнэлт
 
-Энэхүү төсөл нь логистик регрессийг практикт хэрэгжүүлэх явцдаа зөвхөн алгоритмын ажиллагаа төдийгүй өгөгдлийн чанар, статистик ойлголтууд загварын гүйцэтгэлд ямар их нөлөөтэйг бодитоор мэдрэх боломж олголоо. Загвар тогтвортой суралцаж, overfitting ажиглагдаагүй нь L2 арга болон градиент бууруулалт оновчтой байсны илрэл юм. Гэсэн хэдий ч гүйцэтгэл, ялангуяа F1 үнэлгээ нь $0.66$ давахгүй байгаа нь өгөгдлийн бүтэц, классын тэнцвэргүй байдал зэрэгтэй холбоотой.
+Энэхүү төсөл нь логистик регрессийг практикт хэрэгжүүлэх явцдаа зөвхөн алгоритмын ажиллагаа төдийгүй өгөгдлийн чанар, статистик ойлголтууд загварын гүйцэтгэлд ямар их нөлөөтэйг бодитоор мэдрэх боломж олголоо. Загвар тогтвортой суралцаж, overfitting ажиглагдаагүй нь L2 арга болон градиент бууруулалт оновчтой байсны илрэл юм. Гэсэн хэдий ч гүйцэтгэл, ялангуяа F1 үнэлгээ нь $0.66$ давахгүй байгаа нь өгөгдлийн бүтэц, классын тэнцвэргүй байдал, оролтын хувьсагчийн хамаарал нь шугаман бус байх зэрэгтэй холбоотой байж болзошгүй.
 
-Ирээдүйд random forest, decision tree зэрэг шугаман бус загваруудыг ашиглавал >50K орлоготой хүмүүсийг илүү найдвартай таамаглах боломжтой. Гол сургамж нь зөвхөн accuracy-аас гадна precision, recall, F1 үзүүлэлтүүдийг ойлгон, ашиглах загвараа болон өгөгдлийн чанарыг хамтад нь үнэлэх хэрэгтэй гэдгийг харуулж байна.
+Ирээдүйд random forest, decision tree зэрэг шугаман бус загваруудыг ашиглавал >50K орлоготой хүмүүсийг илүү найдвартай таамаглах боломжтой гэж үзэж байна. Гол сургамж нь зөвхөн accuracy-аас гадна precision, recall, F1 үзүүлэлтүүдийг чухалчилж, ашиглах загвараа болон өгөгдлийн чанарыг хамтад нь үнэлэх хэрэгтэй гэдгийг харуулж байна.
 
 # Багийн гишүүдийн оролцоо
 
 Багаараа цаг товлон уулзаж, зорилго болон сэдэв сонголтоо хийсэн. Хүн бүр өөрсдийн хийх ажлыг хуваан авч гэр гэрээсээ хийхээр болсон. Github дээр шинэ төсөл үүсгэж 4 гишүүд бүгд жигд оролцон хийсэн.
 
+Төслийн холбоос: https://github.com/JavkhlanGanbat/Statistics
+
 # Ном зүй
 
-- Fatakdawala, Mustafa. (2018). *Income Dataset* 
+- Fatakdawala, M. (2018). Income Dataset. 
   <https://www.kaggle.com/datasets/mastmustu/income>
 
-- Scikit-learn developers. (2024). *Logistic Regression: scikit-learn documentation*.  
+**Анхаарах зүйл**: Энэ өгөгдлийг анх 1994 оны U.S. Census Current Population Survey судалгаагаар авч, Барри Бекр боловсруулалт хийж, Ронни Кохави UCI ML repository-д хандивласан. 
+(https://www.cs.toronto.edu/~delve/data/adult/adultDetail.html).
+
+- Scikit-learn developers. *Logistic Regression: scikit-learn documentation*.  
   <https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression>
 
 - StatQuest. (2024). *Logistic Regression*.  
@@ -674,10 +686,10 @@ $$
 
 - Russell, S., & Norvig, P. (2016). *Artificial Intelligence: A Modern Approach* (3rd ed.). Pearson.
 
-- Google Developers. (n.d.). *Logistic regression: Loss and regularization*.  
+- Google Developers. *Logistic regression: Loss and regularization*.  
   <https://developers.google.com/machine-learning/crash-course/logistic-regression/loss-regularization>
 
-- Danushka. (n.d.). *Logistic Regression* (lecture notes).  
+- Danushka. (2019). *Logistic Regression* (lecture notes).  
   <https://danushka.net/lect/dm/logreg.pdf>
 
 - Sanderson, G. (2016). *Essence of Linear Algebra*.  
