--- a/report/statreport.qmd
+++ b/report/statreport.qmd
@@ -58,7 +58,7 @@ format:
 
 # Оршил
 
-Энэ төслийн зорилго нь хувь хүний мэдээллийг нь ашиглан жилийн орлого нь 50,000 ам.доллароос дээш эсэхийг таамаглах явдал юм. Бид Kaggle платформ дээрх Adult Income өгөгдлийг ашиглан орлогын түвшинг урьдчилан таамаглах логистик регресс загвар боловсруулж, гаргасан үр дүн дээр дүн шинжилгээ хийнэ. Үүний зэрэгцээ загварынхаа магадлалт болон статистикийн суурьтай танилцаж, оновчлолын аргуудын талаар сурах болно.
+Энэ төслийн зорилго нь хувь хүний мэдээллийг нь ашиглан жилийн орлого нь 50,000 ам.доллароос дээш эсэхийг таамаглах явдал юм. Бид Kaggle платформ дээрх Adult Income өгөгдлийг ашиглан орлогын түвшинг урьдчилан таамаглах логистик регресс загвар боловсруулж, гаргасан үр дүнг шинжлэх болно. Үүний зэрэгцээ загварынхаа магадлалт болон статистик суурьтай танилцаж, оновчлолын аргуудын талаар сурах болно.
 
 # Өгөгдөл
 
@@ -422,8 +422,11 @@ def _compute_gradients(self, X, y, y_pred):
 ```
 
 Сургалт нь дараах нөхцлийн аль нэг нь биелэхэд зогсоно:
+
 1. Сургалтын алдаа тодорхой утга руу нийлэх үед 
+
 2. `max_iter` 1000 давах үед 
+
 3. Баталгаажуулалтын алдаа нь багасахаа болих үед (early stopping) 
 
 ## Нэмэлт
