--- a/report/statreport.qmd
+++ b/report/statreport.qmd
@@ -294,9 +294,9 @@ $$
 
 буюу:
 
-- $if$ $y = 1\: \ell = -\log(\hat{p})$
+- $\text{if}\quad y = 1\: \ell = -\log(\hat{p})$
 
-- $if$ $y = 0\: \ell = -\log(1 - \hat{p})$
+- $\text{if}\quad y = 0\: \ell = -\log(1 - \hat{p})$
 
 Cross-entropy нь загварыг итгэлтэйгээр буруу таамаглал гаргахыг илүү шийтгэдэг. Өөрөөр хэлбэл 1 эсвэл 0-тэй маш ойрхон магадлал (0.99, 0.01 г.м.) таамаглахад буруу болж таарвал алдаа нь өндөр гарч ирнэ.
 
