--- a/report/statreport.qmd
+++ b/report/statreport.qmd
@@ -273,7 +273,7 @@ y_i \log(\hat{p}_i) + (1-y_i)\log(1 - \hat{p}_i)
 \right]
 $$
 
-Энэнийг алдааны функц болгохын тулд $-1$-р үржүүлнэ. Өөрөөр хэлбэл binary cross-entropy loss фунцкээ гаргаж ирлээ.
+Энийг алдааны функц болгохын тулд $-1$-р үржүүлнэ. Өөрөөр хэлбэл binary cross-entropy loss фунцкээ гаргаж ирлээ.
 
 $$
 L_{\text{CE}}(w,b) = 
